# dlib-FaceAlignment

./: settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/lx/dlib_cmake_demo2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dlib_FaceAlignment.cpp  seetaface_detection.cpp
app/src/main/cpp/dlib/array2d/: array2d_kernel.h
app/src/main/cpp/dlib/geometry/: drectangle.h  rectangle.h
app/src/main/cpp/dlib/image_processing/: box_overlap_testing.h  frontal_face_detector.h  object_detector.h  object_detector_abstract.h  scan_fhog_pyramid.h  scan_fhog_pyramid_abstract.h
app/src/main/cpp/dlib/image_transforms/: fhog.h  fhog_abstract.h  interpolation.h
app/src/main/cpp/dlib/matrix/: matrix_abstract.h
app/src/main/cpp/dlib/opencv/: cv_image.h
app/src/main/cpp/dlib/simd/: simd4f.h  simd8f.h
app/src/main/java/com/example/lx/dlib_cmake_demo2/: MainActivity.java  MyZoomImageView.java
app/src/main/java/com/example/lx/dlib_cmake_demo2/FaceAlignment/: Dlib_API.java
app/src/main/java/com/example/lx/dlib_cmake_demo2/FaceDetection/: SeetaFace_API.java
app/src/main/java/com/example/lx/dlib_cmake_demo2/Utils/: PictureUtils.java  imageProcess.java  loadModel.java
app/src/main/res/layout/: activity_main.xml  view_and_title.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/lx/dlib_cmake_demo2/: ExampleUnitTest.java
libraries/opencv3.0/: build.gradle
opencv/: ReadMe.txt
opencv/include/opencv2/: cvconfig.h
